[package]
name = "firnas_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
firnas_compiler = { version = "*", git = "https://github.com/firnas-lang/firnas", default-features = false }
firnas_ext = { version = "*", git = "https://github.com/firnas-lang/firnas", default-features = false }
firnas_vm = { version = "*", git = "https://github.com/firnas-lang/firnas", default-features = false }
js-sys = "0.3.65"

[features]
default = ["en"]
en = ["firnas_vm/en", "firnas_compiler/en"]
ar = ["firnas_vm/ar", "firnas_compiler/ar"]
